# mujoco_ros2_control_menagerie

./: README.md
ai_worker_mujoco_ros2/ai_worker_mujoco_description/: CMakeLists.txt  package.xml
ai_worker_mujoco_ros2/ai_worker_mujoco_description/config/: initial_positions.yaml
ai_worker_mujoco_ros2/ai_worker_mujoco_description/config/ros2_control/: ai_worker_controllers.yaml  ai_worker_ffw_bg2_controllers.yaml  ai_worker_ffw_bh5_controllers.yaml  ai_worker_ffw_sg2_controllers.yaml  ai_worker_ffw_sh5_controllers.yaml
ai_worker_mujoco_ros2/ai_worker_mujoco_description/meshes/ffw_bg2_rev3_follower/: arm_l_link1.stl  arm_l_link2.stl  arm_l_link3.stl  arm_l_link4.stl  arm_l_link5.stl  arm_l_link6.stl  arm_l_link7.stl  arm_r_link1.stl  arm_r_link2.stl  arm_r_link3.stl  arm_r_link4.stl  arm_r_link5.stl  arm_r_link6.stl  arm_r_link7.stl  body_arm_assy.stl  head_link1.stl  head_link2.stl
ai_worker_mujoco_ros2/ai_worker_mujoco_description/mjcf/: ffw_bg2.xml  ffw_bh5.xml  ffw_sg2.xml  ffw_sh5.xml  scene_ffw_bg2.xml  scene_ffw_bh5.xml  scene_ffw_sg2.xml  scene_ffw_sh5.xml
ai_worker_mujoco_ros2/ai_worker_mujoco_description/urdf/: ai_worker.ros2_control.xacro  ai_worker_mujoco.urdf.xacro
ai_worker_mujoco_ros2/ai_worker_mujoco_description/urdf/ffw_bg2_rev2_follower/: ffw_bg2_follower.urdf.xacro
ai_worker_mujoco_ros2/ai_worker_mujoco_description/urdf/ffw_bg2_rev3_follower/: ffw_bg2_follower.urdf.xacro  ffw_follower_body.xacro
ai_worker_mujoco_ros2/ai_worker_mujoco_description/urdf/ffw_bg2_rev4_follower/: ffw_bg2_follower.urdf  ffw_bg2_follower.urdf.xacro
ai_worker_mujoco_ros2/ai_worker_mujoco_description/urdf/ffw_bh5_rev1_follower/: ffw_bh5_follower.urdf.xacro
ai_worker_mujoco_ros2/ai_worker_mujoco_description/urdf/ffw_sg2_rev1_follower/: ffw_sg2_follower.urdf  ffw_sg2_follower.urdf.xacro
ai_worker_mujoco_ros2/ai_worker_mujoco_description/urdf/ffw_sh5_rev1_follower/: ffw_sh5_follower.urdf  ffw_sh5_follower.urdf.xacro
g1_mujoco_ros2/g1_mujoco_bringup/: CMakeLists.txt  package.xml
g1_mujoco_ros2/g1_mujoco_bringup/config/: dexgraft_g1.yaml
g1_mujoco_ros2/g1_mujoco_bringup/launch/: robot.launch.py
g1_mujoco_ros2/g1_mujoco_bringup/scripts/: robot_description_publisher.py
g1_mujoco_ros2/g1_mujoco_description/: CMakeLists.txt  THIRD_PARTY_NOTICES.md  package.xml
g1_mujoco_ros2/g1_mujoco_description/config/: initial_positions.yaml
g1_mujoco_ros2/g1_mujoco_description/config/ros2_control/: g1_controllers.yaml  g1_with_hands_controllers.yaml  g1_with_inspire_hands_controllers.yaml
g1_mujoco_ros2/g1_mujoco_description/mjcf/: g1.xml  g1_29dof.xml  g1_29dof_fixed.xml  g1_29dof_inspire_hand.xml  scene_inspire_hand.xml  scene_inspire_hand_fixed.xml  scene_with_hands_fixed.xml
g1_mujoco_ros2/g1_mujoco_description/urdf/: g1.ros2_control.xacro  g1_29dof.urdf  g1_hand_left.urdf.xacro  g1_hand_right.urdf.xacro  g1_hands.urdf.xacro  g1_inspire_hand_left.urdf.xacro  g1_inspire_hand_right.urdf.xacro  g1_mujoco.urdf.xacro
g1_mujoco_ros2/g1_mujoco_description/urdf/inspire_hand/: rh56f1_hand.urdf.xacro
g1_mujoco_ros2/g1_mujoco_ros2/: CMakeLists.txt  package.xml
humanoid_mujoco_ros2_control/: CMakeLists.txt  package.xml
rby1_mujoco_ros2/rby1_mujoco_bringup/: CMakeLists.txt  package.xml
rby1_mujoco_ros2/rby1_mujoco_bringup/config/ros2_control/: rby1m_controllers.yaml  rby1ub_controllers.yaml
rby1_mujoco_ros2/rby1_mujoco_bringup/launch/: robot.launch.py
rby1_mujoco_ros2/rby1_mujoco_bringup/scripts/: robot_description_publisher.py
rby1_mujoco_ros2/rby1_mujoco_description/: CMakeLists.txt  package.xml
rby1_mujoco_ros2/rby1_mujoco_description/config/initial_positions/: rby1a.yaml  rby1a_wuji.yaml  rby1m.yaml  rby1m_wuji.yaml  rby1ub.yaml
rby1_mujoco_ros2/rby1_mujoco_description/config/ros2_control/: rby1a_controllers.yaml  rby1a_wuji_controllers.yaml  rby1m_controllers.yaml  rby1m_wuji_controllers.yaml
rby1_mujoco_ros2/rby1_mujoco_description/mjcf/rby1a/: model.xml  model_act.xml  model_act_v1.0.xml  model_act_v1.0_wuji.xml  model_act_v1.1.xml  model_act_v1.1_wuji.xml  model_act_v1.2.xml  model_act_v1.2_wuji.xml  model_v1.0.xml  model_v1.1.xml  model_v1.2.xml  rby1.xml  rby1_v1.0.xml  rby1_v1.0_wuji.xml  rby1_v1.1.xml  rby1_v1.1_wuji.xml  rby1_v1.2.xml  rby1_v1.2_wuji.xml
rby1_mujoco_ros2/rby1_mujoco_description/mjcf/rby1m/: model_act.xml  model_act_v1.0.xml  model_act_v1.0_wuji.xml  model_act_v1.1.xml  model_act_v1.1_wuji.xml  model_act_v1.2.xml  model_act_v1.2_wuji.xml  model_act_v1.3.xml  model_act_v1.3_wuji.xml  model_v1.0.xml  model_v1.1.xml  model_v1.2.xml  model_v1.3.xml  rby1.xml  rby1_v1.0.xml  rby1_v1.0_wuji.xml  rby1_v1.1.xml  rby1_v1.1_wuji.xml  rby1_v1.2.xml  rby1_v1.2_wuji.xml  rby1_v1.3.xml  rby1_v1.3_wuji.xml
rby1_mujoco_ros2/rby1_mujoco_description/mjcf/rby1ub/: model.xml  model_act.xml  rby1.xml
rby1_mujoco_ros2/rby1_mujoco_description/urdf/: rby1.ros2_control.xacro  rby1.urdf.xacro
rby1_mujoco_ros2/rby1_mujoco_description/urdf/master_arm/: model.urdf
rby1_mujoco_ros2/rby1_mujoco_description/urdf/rby1a/: model.urdf  model_v1.0.urdf  model_v1.1.urdf  model_v1.2.urdf
rby1_mujoco_ros2/rby1_mujoco_description/urdf/rby1a_wuji/: model_v1.2.urdf
rby1_mujoco_ros2/rby1_mujoco_description/urdf/rby1m/: model.urdf  model_v1.0.urdf  model_v1.1.urdf  model_v1.2.urdf  model_v1.3.urdf
rby1_mujoco_ros2/rby1_mujoco_description/urdf/rby1m_wuji/: model_v1.2.urdf
rby1_mujoco_ros2/rby1_mujoco_description/urdf/rby1ub/: model.urdf
(+48 files in other folders)
