<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_mujoco_ros2</name>
  <version>0.1.0</version>
  <description>Metapackage for Unitree G1 MuJoCo ros2_control support.</description>
  <maintainer email="shkwon@tommoro.ai">Sunghyun Kwon</maintainer>
  <license>BSD-3-Clause</license>
  <author email="shkwon@tommoro.ai">Sunghyun Kwon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>g1_mujoco_bringup</exec_depend>
  <exec_depend>g1_mujoco_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
